# gex_s3

./: .dockerignore  .env_docker  .gitignore  Dockerfile  README.md  config.py  database.py  db_test.py  deltalake_test.py  docker-compose OLD.yml  docker-compose.yml  duckdb_test.py  env_sample  gravitino.py  iceberg_test.py  initialize_db.py  initialize_db_NOTWORKING.py  main.py  memoryduck.py  pyproject.toml  requirements original.txt  requirements.txt  s3_test.py  schema1_from_parquet.sql  schema2_from_web.sql  testflow.py  uniform_test.py
app/: main.py
app/db_routines/: config.py  data_models.py  database.py  duckdb_routines.py
app/routers/: duck.py  old.py  raschke.py
conf/: gravitino-env.sh  gravitino-iceberg-rest-server.conf
