[project]
name = "duck"
version = "0.1.0"
description = "GEX in Duckdb"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.18",
    "deltalake>=0.25.5",
    "dotenv>=0.9.9",
    "duckdb>=1.2.2",
    "fastapi[standard]>=0.115.12",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "prefect>=3.4.2",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.13.0",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
    "yfinance>=0.2.61",
]
